--- a/Views/CustomerView.html
+++ b/Views/CustomerView.html
@@ -20,7 +20,7 @@
                 <td>{{customer.age}}</td>
                 <td>{{customer.location}}</td>
                 <td>{{customer.company}}</td>
-                <td> <a href = "">View</a></td>
+                <td> <a href = "#/CustomerDetail/">View</a></td>
                 <td><a href="">Edit</a></td>
                 <td><a href="">Delete</a></td>
             </tr>
